# ddcheck

./: .aider.conf.yml  .flake8  .pre-commit-config.yaml  CODING_GUIDELINES.adoc  Dockerfile  NOTES.adoc  README.md  pyproject.toml
.streamlit/: config.toml  pages.toml
ddcheck/: ddcheck.py  main.py
ddcheck/analysis/: analysis.py  osinfo.py  top.py  ttop.py
ddcheck/pages/: 01_Upload.py  02_Analysis.py  03_Report.py  _analysis.py  analysis.py  upload.py
ddcheck/storage/: __init__.py  list.py  upload.py
ddcheck/utils/: __init__.py  file_handling.py  upload.py
