[tool.poetry]
name = "ddcheck"
version = "0.1.0"
description = ""
authors = ["Pierre Laporte <pierre@pingtimeout.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.42.0"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.1"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ddcheck = "ddcheck.ddcheck:main"
